error in add item
error in add item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="recent_buy">Recent Buy</string>
     <string name="buy_again">Buy Again</string>
     <string name="save_information">Save Information</string>
+    <string name="minus">Minus</string>
+    <string name="delete">Delete</string>
+    <string name="plus">Plus</string>
 </resources>
