--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="minus">Minus</string>
     <string name="delete">Delete</string>
     <string name="plus">Plus</string>
+    <string name="all_item">All Item</string>
 </resources>
